force-app/main/default/objects/Campaign/fields/DB_Campaign_Tactic__c.field-meta.xml
<CustomField>
    <fullName>DB_Campaign_Tactic__c</fullName>
    <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
    <label>DB Campaign Tactic</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Print Advertisement</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Employment Seminars</fullName>
            </value>
            <value>
                <fullName>Webinars</fullName>
            </value>
            <value>
                <fullName>Public Relations</fullName>
            </value>
            <value>
                <fullName>Partners</fullName>
            </value>
            <value>
                <fullName>Referral Program</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Lunches</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Sales Call Down</fullName>
            </value>
            <value>
                <fullName>Online Banners/Ads</fullName>
            </value>
            <value>
                <fullName>Internal Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>