force-app/main/default/objects/Campaign/fields/Intent__c.field-meta.xml
<CustomField>
    <fullName>Intent__c</fullName>
    <inlineHelpText>What is the intent of this Campaign? Mention this on the base level campaign.</inlineHelpText>
    <label>Intent</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Advertorial</fullName>
            </value>
            <value>
                <fullName>Perception</fullName>
            </value>
            <value>
                <fullName>Pre-Marketing (Year round)</fullName>
            </value>
            <value>
                <fullName>Recall</fullName>
            </value>
            <value>
                <fullName>Media Planner</fullName>
            </value>
            <value>
                <fullName>Visibility</fullName>
            </value>
            <value>
                <fullName>Call for</fullName>
            </value>
            <value>
                <fullName>Conversions</fullName>
            </value>
            <value>
                <fullName>Paid Campaigns</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>