force-app/main/default/objects/Campaign/fields/Medium__c.field-meta.xml
<CustomField>
    <fullName>Medium__c</fullName>
    <label>Medium</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Newspaper - National</fullName>
            </value>
            <value>
                <fullName>Newspaper - Regional</fullName>
            </value>
            <value>
                <fullName>Magazines</fullName>
            </value>
            <value>
                <fullName>Brochure</fullName>
            </value>
            <value>
                <fullName>Flyers</fullName>
            </value>
            <value>
                <fullName>Expo Specific Material</fullName>
            </value>
            <value>
                <fullName>SM Post</fullName>
            </value>
            <value>
                <fullName>Publishers</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>OTT</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
            <value>
                <fullName>Walk-in</fullName>
            </value>
            <value>
                <fullName>Calling</fullName>
            </value>
            <value>
                <fullName>EDU EXPO</fullName>
            </value>
            <value>
                <fullName>Articles Blogs</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Convocations</fullName>
                <isActive>false</isActive>
                <label>Convocations</label>
            </value>
            <value>
                <fullName>Fascism</fullName>
                <isActive>false</isActive>
                <label>Fascism</label>
            </value>
            <value>
                <fullName>Founder&apos;s Day</fullName>
                <isActive>false</isActive>
                <label>Founder&apos;s Day</label>
            </value>
            <value>
                <fullName>Web Banner</fullName>
                <isActive>false</isActive>
                <label>Web Banner</label>
            </value>
            <value>
                <fullName>Web Intro</fullName>
                <isActive>false</isActive>
                <label>Web Intro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>