force-app/main/default/objects/Campaign/fields/Pardot_Tracking_Code__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Tracking_Code__c</fullName>
    <description>Paste the Pardot Tracking Code of this Campaign.</description>
    <inlineHelpText>Capture the Pardot Tracking Code of this Campaign from Pardot level.</inlineHelpText>
    <label>Pardot Tracking Code</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>