force-app/main/default/objects/Campaign/fields/QR_Code__c.field-meta.xml
<CustomField>
    <fullName>QR_Code__c</fullName>
    <inlineHelpText>Upload the QR code if applicable</inlineHelpText>
    <label>QR Code</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>