force-app/main/default/objects/Campaign/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Medium__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>The Hindu</fullName>
            </value>
            <value>
                <fullName>Times of India</fullName>
            </value>
            <value>
                <fullName>Deccan Herald</fullName>
            </value>
            <value>
                <fullName>Education Times</fullName>
            </value>
            <value>
                <fullName>The New Indian Express</fullName>
            </value>
            <value>
                <fullName>Vijayavani</fullName>
            </value>
            <value>
                <fullName>Kannada Prabha</fullName>
            </value>
            <value>
                <fullName>Samyuktha Karnataka</fullName>
            </value>
            <value>
                <fullName>Udayavani</fullName>
            </value>
            <value>
                <fullName>Prajavani</fullName>
            </value>
            <value>
                <fullName>Vijaya Karnataka</fullName>
            </value>
            <value>
                <fullName>Inflight Magazines</fullName>
            </value>
            <value>
                <fullName>Rankings</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Siksha</fullName>
            </value>
            <value>
                <fullName>Career 360</fullName>
            </value>
            <value>
                <fullName>School of Performing Arts and Indic Studies</fullName>
            </value>
            <value>
                <fullName>School of Arts, Humanities and Social Sciences</fullName>
            </value>
            <value>
                <fullName>School of Legal Studies</fullName>
            </value>
            <value>
                <fullName>School of Allied Health Sciences</fullName>
            </value>
            <value>
                <fullName>School of Applied Sciences</fullName>
            </value>
            <value>
                <fullName>School of Computer Science and Applications</fullName>
            </value>
            <value>
                <fullName>REVA Business School</fullName>
            </value>
            <value>
                <fullName>School of Management Studies</fullName>
            </value>
            <value>
                <fullName>School of Commerce</fullName>
            </value>
            <value>
                <fullName>School of Architecture</fullName>
            </value>
            <value>
                <fullName>School of Mechanical Engineering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>