force-app/main/default/objects/Campaign/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Collaterals</fullName>
            </value>
            <value>
                <fullName>Mailers</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>REVA CET 2023</fullName>
            </value>
            <value>
                <fullName>Apply Now</fullName>
            </value>
            <value>
                <fullName>Print Ads</fullName>
            </value>
            <value>
                <fullName>Education Portals</fullName>
            </value>
            <value>
                <fullName>Announcements</fullName>
            </value>
            <value>
                <fullName>Govt Mandatory</fullName>
            </value>
            <value>
                <fullName>Content Marketing</fullName>
            </value>
            <value>
                <fullName>Ad Campaigns</fullName>
            </value>
            <value>
                <fullName>Special Days</fullName>
                <isActive>false</isActive>
                <label>Special Days</label>
            </value>
            <value>
                <fullName>Special Highlights</fullName>
                <isActive>false</isActive>
                <label>Special Highlights</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>