force-app/main/default/objects/Campaign/listViews/Highest_Level_Campaigns.listView-meta.xml
<ListView>
    <fullName>Highest_Level_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PARENT_ID</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Top Level Active Campaigns</label>
</ListView>